--- a/TESLA.html
+++ b/TESLA.html
@@ -7,6 +7,8 @@
         font-size: 15pt;
         background-size: cover;
         background-repeat: no-repeat;
+        max-height: 1920px;
+        max-width: 1920px;
     }
     .navbar{
         font-family: Bahnschrift SemiBold SemiConden;
@@ -36,10 +38,10 @@ img{
     margin-top: 10px;
 }
 .right{
-    margin-left: 100px;
+    margin-left: 250px;
 }
 .left{
-    margin-left: 200px;
+    margin-left: 350px;
 }
 .center{
    color: white;
@@ -50,7 +52,7 @@ img{
     color: rgb(255, 255, 255);
     border-radius: 30px;
     background-color: rgb(0, 0, 0);
-    margin-left: 450px;
+    margin-left: 700px;
     text-decoration: none;
 }
 .buttonright{
@@ -80,11 +82,12 @@ img{
 </br></br></br></br></br></br>
 <div class="center">
     <center>
+        <br><br>
     <h1 class="center">Model 3</h1>
     <p class="center">Order Online for <a class="center" href="#">Touchless Delivery</a></p>
 </center>
 </div>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br><br><br>
 <div class="button">
     <center>
         <ul type="none">
